--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ default = []
 
 [dependencies]
 failure = "0.1.5"
-fbxcel = { git = "https://github.com/lo48576/fbxcel.git", rev = "458a45400051", features = ["tree"] }
+fbxcel = { version = "0.4" , features = ["tree"] }
 log = "0.4.4"
 mint = { version = "0.5", optional = true }
 string-interner = { version = "0.7", default-features = false }
