--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ failure = "0.1.5"
 fbxcel = { version = "0.4.3" , features = ["tree"] }
 log = "0.4.4"
 mint = "0.5"
+rgb = "0.8"
 string-interner = { version = "0.7", default-features = false }
 
 [dev-dependencies]
