--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 description = "FBX DOM library"
 repository = "https://github.com/lo48576/fbxcel-dom"
 keywords = ["FBX", "3D", "model"]
+categories = ["rendering::data-formats"]
 
 [package.metadata.docs.rs]
 all-features = true
