Run CI tests with all features enabled

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,8 @@ rust:
   - stable
   - beta
   - 1.34.0
+script:
+  - cargo build --verbose --all-features
+  - cargo test --verbose --all-features
 notifications:
   email: false
