--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ all-features = true
 default = []
 
 [dependencies]
-failure = "0.1.5"
+failure = { version = "0.1.5", default-features = false, features = ["std"] }
 fbxcel = { version = "0.4.3" , features = ["tree"] }
 log = "0.4.4"
 mint = "0.5"
