--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,10 @@ all-features = true
 default = []
 
 [dependencies]
+anyhow = "1.0.40"
+fbxcel = { version = "0.7.0", features = ["tree"] }
+log = "0.4.14"
+thiserror = "1.0.24"
 
 [badges]
 maintenance = { status = "experimental" }
