--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ default = []
 anyhow = "1.0.40"
 #fbxcel = { version = "0.7.0", features = ["tree"] }
 fbxcel = { git = "https://github.com/lo48576/fbxcel.git", rev = "876e7daa8dcd84ede8363f7fc732d5b2c8965dd9", features = ["tree"] }
+lasso = "0.5.0"
 log = "0.4.14"
 thiserror = "1.0.24"
 
