--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "fbxcel-dom"
 version = "0.0.7"
 authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
 edition = "2018"
+rust-version = "1.56"
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 description = "FBX DOM library"
@@ -18,14 +19,14 @@ default = []
 
 [dependencies]
 anyhow = "1.0.22"
-fbxcel = { version = "0.7.0", features = ["tree"] }
+fbxcel = { version = "0.8.1", features = ["tree"] }
 log = "0.4.4"
 mint = "0.5"
 rgb = "0.8.12"
 string-interner = { version = "0.12.2", default-features = false, features = ["backends", "inline-more", "std"] }
 
 [dev-dependencies]
-env_logger = "0.8.2"
+env_logger = "0.9.0"
 
 [badges]
 maintenance = { status = "experimental" }
